set(SOURCE_FILES)

if (BUILD_VIDEO_EVALUATORS AND
    BUILD_CAFFE_EVALUATORS AND
    BUILD_CAFFE_INPUT_EVALUATORS AND
    BUILD_TRACKER_EVALUATORS AND
    BUILD_UTIL_EVALUATORS)
  list(APPEND SOURCE_FILES
    kcam_pipeline.cpp)
endif()

if (BUILD_UTIL_EVALUATORS)
  list(APPEND SOURCE_FILES
    kcam_box_reader.cpp)
endif()

if (BUILD_VIDEO_EVALUATORS AND
    BUILD_CAFFE_EVALUATORS AND
    BUILD_CAFFE_INPUT_EVALUATORS)
  list(APPEND SOURCE_FILES
    knn_pipeline.cpp
    knn_patches_pipeline.cpp)
endif()

if (BUILD_VIDEO_EVALUATORS AND BUILD_UTIL_EVALUATORS)
  list(APPEND SOURCE_FILES
    effective_io_rate_pipeline.cpp)
endif()

if (BUILD_VIDEO_EVALUATORS AND BUILD_UTIL_EVALUATORS)
  list(APPEND SOURCE_FILES
    effective_decode_rate_pipeline.cpp)
endif()

if (BUILD_VIDEO_EVALUATORS AND
    BUILD_CAFFE_EVALUATORS AND
    BUILD_CAFFE_INPUT_EVALUATORS AND
    BUILD_UTIL_EVALUATORS)
  list(APPEND SOURCE_FILES
    dnn_rate_pipeline.cpp)
endif()

if (BUILD_VIDEO_EVALUATORS AND BUILD_IMAGE_PROCESSING_EVALUATORS)
  list(APPEND SOURCE_FILES
    simple_pipeline.cpp)
endif()

if (BUILD_VIDEO_EVALUATORS AND BUILD_MOVIE_ANALYSIS_EVALUATORS)
  list(APPEND SOURCE_FILES
    opticalflow_pipeline.cpp)
endif()

add_library(pipelines OBJECT
  ${SOURCE_FILES})
